--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist --branch gh-pages",
     "preview": "vite preview",
     "build-only": "vite build",
