--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_REST_SERVER="https://2a34-46-216-179-183.ngrok-free.app"
+VITE_APP_REST_SERVER="https://b988-46-216-179-183.ngrok-free.app"
